--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "mocha ./tests/**/*$NAME*.test.js --recursive --exit",
+    "test:coverage": "nyc --include='src/**/*.js' npm run test"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,10 @@
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.18"
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.18",
+    "nyc": "^15.1.0",
+    "sinon": "^14.0.0"
   }
 }
